// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots actions button 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-1r7zk4a=""
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-1avozw2=""
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          data-css-1997kh1=""
        >
          As a button
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots actions button w/ icon button 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-1r7zk4a=""
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-1fobjei=""
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          data-css-1997kh1=""
        >
          As a button
        </span>
        <div
          data-css-otejxm=""
          onClick={[Function]}
        >
          <svg
            aria-label="close icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots actions just icon button 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-1r7zk4a=""
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-wa9aah=""
      >
        <span
          data-css-1997kh1=""
        >
          As a button
        </span>
        <div
          data-css-otejxm=""
          onClick={[Function]}
        >
          <svg
            aria-label="close icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots actions link 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-1r7zk4a=""
  >
    <div
      data-css-1lu7sfl=""
    >
      <a
        data-css-1avozw2=""
        href="https://duckduckgo.com/"
      >
        <span
          data-css-1997kh1=""
        >
          As a link
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots actions link with target 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-1r7zk4a=""
  >
    <div
      data-css-1lu7sfl=""
    >
      <a
        data-css-1avozw2=""
        href="https://duckduckgo.com/"
        target="_blank"
      >
        <span
          data-css-1997kh1=""
        >
          Opens in new window
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots actions small button 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-1r7zk4a=""
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-1i9achc=""
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          data-css-1997kh1=""
        >
          As a button
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots error focusable 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-1r7zk4a=""
  >
    <div
      data-css-mmyfiy=""
    >
      <div
        data-css-1avozw2=""
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          data-css-1997kh1=""
        >
          I have a problem
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots icon medium 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-1r7zk4a=""
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-wa9aah=""
      >
        <span
          data-css-1997kh1=""
        >
          With Icon
        </span>
        <div
          data-css-otejxm=""
          onClick={[Function]}
        >
          <svg
            aria-label="close icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots icon small 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-1r7zk4a=""
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-llk67k=""
      >
        <span
          data-css-1997kh1=""
        >
          With Icon
        </span>
        <div
          data-css-12f5sv2=""
          onClick={[Function]}
        >
          <svg
            aria-label="close icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots isPressed button 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-1r7zk4a=""
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        aria-pressed={true}
        data-css-uehscn=""
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          data-css-1997kh1=""
        >
          As a button
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots isPressed button w/ icon button 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-1r7zk4a=""
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        aria-pressed={true}
        data-css-1kwjqf=""
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          data-css-1997kh1=""
        >
          As a button
        </span>
        <div
          data-css-otejxm=""
          onClick={[Function]}
        >
          <svg
            aria-label="close icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots isPressed link 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-1r7zk4a=""
  >
    <div
      data-css-1lu7sfl=""
    >
      <a
        aria-pressed={true}
        data-css-uehscn=""
        href="https://duckduckgo.com/"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          data-css-1997kh1=""
        >
          As a link
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots long string 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-1r7zk4a=""
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-frhtu8=""
      >
        <span
          data-css-1997kh1=""
        >
          This is the string that goes on forever and always. There really isn't an end. Wow.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots long with icon 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-1r7zk4a=""
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-wa9aah=""
      >
        <span
          data-css-1997kh1=""
        >
          This is the string that goes on forever and always. There really isn't an end. Wow.
        </span>
        <div
          data-css-otejxm=""
          onClick={[Function]}
        >
          <svg
            aria-label="check icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M9.59 14.58l-2.818-2.818a.5.5 0 00-.706-.001l-.71.705a.5.5 0 00-.002.708l3.882 3.882a.5.5 0 00.708 0l9.292-9.292a.5.5 0 000-.708l-.702-.702a.5.5 0 00-.708 0L9.59 14.58z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots size medium 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-1r7zk4a=""
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-frhtu8=""
      >
        <span
          data-css-1997kh1=""
        >
          medium
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots size small 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    data-css-1r7zk4a=""
  >
    <div
      data-css-1lu7sfl=""
    >
      <div
        data-css-1kwinz7=""
      >
        <span
          data-css-1997kh1=""
        >
          small
        </span>
      </div>
    </div>
  </div>
</div>
`;
